# jvm-for-rust

./: .gitignore  LICENSE  README.md  cargo.toml
docs/: classloader.MD  classloader.md  gabage-collector.MD  jvm-funcation-analyze.md  jvm.md
gc/: Cargo.toml
gc/src/: lib.rs
gc/src/allocator/: global_allocator.rs  mod.rs  overflow_allocator.rs  thread_local_allocator.rs
gc/src/model/: address.rs  block.rs  heap_obj.rs  layout.rs  line_map.rs  mod.rs
gc/src/utils/: macro_util.rs  mmap.rs  mod.rs
jvm/: Cargo.toml
jvm/src/: main.rs
jvm/src/classloader/: class_file_stream.rs  class_loader.rs  class_path.rs  classloader.rs  loader.rs  mod.rs
jvm/src/model/: constant_pool.rs  field.rs  instance_klass.rs  method.rs  mod.rs
jvm/src/reader/: attribute.rs  attribute_info.rs  buffer.rs  class_access_flag.rs  class_file.rs  class_file_error.rs  class_file_parser.rs  class_file_version.rs  class_reader.rs  constant_info.rs  constant_pool.rs  constant_pool_info.rs  constant_tag.rs  exception_table.rs  field_access_flag.rs  field_info.rs  instance_klass.rs  jvm_constants.rs  klass.rs  macro_utils.rs  method_access_flag.rs  method_info.rs  mod.rs  reference_kind.rs  symbol.rs  symbol_table.rs  type_conversion.rs  verifier.rs  vm_symbols.rs
jvm/src/reader/attributes/: annotation.rs  (+37 more)
jvm/src/utilities/: definition.rs  mod.rs
lib/: Cargo.toml  build.rs
lib/src/: lib.rs
lib/src/jiamge/: buffer.rs  image_decompressor.rs  image_file.rs  jimage_error.rs  mod.rs  zip.rs  zip_utils.rs
lib/src/jimage/: image_decompressor.rs  image_file.rs  mod.rs
lib/src/zip/: zip.c
