[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
libc = "0.2.150"

[dependencies.windows]
version = "0.51.1"
features = ["Win32_Foundation", "Win32_System_LibraryLoader"]
